<resources>
    <string name="ship_outfit">Current Ship Outfit</string>
    <string name="cannon">Cannon</string>
    <string name="cannon_desc">A standard but reliable choice.</string>
    <string name="missile_desc">Requires more space, but presents more of a threat.</string>
    <string name="knife_desc">Six inches of folded damascus steel. A wicked edge.</string>
    <string name="Missile">Missile</string>
    <string name="Knife">Knife</string>
    <string name="app_name">Space Trader</string>
    <string name="player_name">Player Name</string>
    <string name="name">Name</string>
    <string name="zero">0</string>
    <string name="pilot_points">Pilot Points</string>
    <string name="trader_points">Trader Points</string>
    <string name="engineer_points">Engineer Points</string>
    <string name="fighter_points">Fighter Points</string>
    <string name="skill_points">Skill Points: 16</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="game_difficulty">Game Difficulty</string>
    <string name="easy">EASY</string>
    <string name="normal">NORMAL</string>
    <string name="hard">HARD</string>
    <string name="insane">INSANE</string>
    <string name="start">Start</string>
    <string name="planet_market">Planet Market</string>
    <string name="planet">Planet</string>
    <string name="player_credits">Player Credits</string>
    <string name="credits">Credits</string>
    <string name="zeros_over_zeros">000/000</string>
    <string name="amount_available_on_planet">Amount available on Planet</string>
    <string name="amount_available_on_ship">Amount available on Ship</string>
    <string name="back">Back</string>
    <string name="planet_name">Planet Name</string>
    <string name="status">Status:</string>
    <string name="planet_event">Planet event</string>
    <string name="tech_level">Tech Level:</string>
    <string name="techlevel">TechLevel</string>
    <string name="resource_level">Resource Level:</string>
    <string name="resourcelevel">Resource Level</string>
    <string name="distance">Distance</string>
    <string name="fly">Fly</string>
    <string name="current_planet">Current Planet:</string>
    <string name="current_solar_system">Current Solar System:</string>
    <string name="solarsystem">Solar System</string>
    <string name="fuel_remaining">Fuel Remaining</string>
    <string name="fuel">Fuel</string>
    <string name="market">Market</string>
    <string name="view_universe">View Universe</string>
    <string name="random_encounter">Random Encounter</string>
    <string name="random_event">Random event</string>
    <string name="random_event_description">Random event description</string>
    <string name="done">Done</string>
    <string name="random_event_result">Random event result</string>
    <string name="solar_system_name_here">Solar System Name Here</string>
    <string name="system_name_here">System Name Here</string>
    <string name="good_name">Good name</string>
    <string name="four_zeros">0000</string>
    <string name="one_thousand_dollars">$100000</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="planet_distance">Planet Distance</string>
    <string name="view">View</string>
</resources>
