<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android
    ="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <TextView
        android:id="@+id/player_name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:text="@string/player_name"
        android:textColor="@color/textColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/player_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/player_name_header"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/pilot_points_input"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/trader_points_input"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilot_points_input"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/engineer_points_input"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trader_points_input"
        android:autofillHints=""
        tools:targetApi="o" />

    <EditText
        android:id="@+id/fighter_points_input"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="108dp"
        android:ems="10"
        android:hint="@string/zero"
        android:inputType="number"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColorHint"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/engineer_points_input"
        android:autofillHints=""
        tools:targetApi="o" />

    <TextView
        android:id="@+id/pilot_points_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="192dp"
        android:text="@string/pilot_points"
        android:textColor="@color/textColor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trader_points_header"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/trader_points"
        android:textColor="@color/textColor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pilot_points_header" />

    <TextView
        android:id="@+id/engineer_points_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/engineer_points"
        android:textColor="@color/textColor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trader_points_header" />

    <TextView
        android:id="@+id/fighter_points_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/fighter_points"
        android:textColor="@color/textColor"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/engineer_points_header" />

    <TextView
        android:id="@+id/points_remaining"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginStart="88dp"
        android:text="@string/skill_points"
        android:textColor="@color/textColorHint"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/player_name_input"/>
    <Button
        android:id="@+id/okay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onOkayPressed"
        android:text="@string/okay"
        android:textColor="@color/textColor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="93dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="onCancelPressed"
        android:text="@string/cancel"
        android:textColor="@color/textColor"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/game_difficulty_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="8dp"
        android:text="@string/game_difficulty"
        android:textColor="@color/textColor"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/easy_button"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/easy"
        android:textColor="@color/toggle_color"
        android:textOff="@string/easy"
        android:textOn="@string/easy"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_difficulty_header" />

    <ToggleButton
        android:id="@+id/normal_button"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/normal"
        android:textColor="@color/toggle_color"
        android:textOff="@string/normal"
        android:textOn="@string/normal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/easy_button" />

    <ToggleButton
        android:id="@+id/hard_button"
        android:layout_width="83dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/hard"
        android:textColor="@color/toggle_color"
        android:textOff="@string/hard"
        android:textOn="@string/hard"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_button" />

    <ToggleButton
        android:id="@+id/insane_button"
        android:layout_width="83dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/insane"
        android:textColor="@color/toggle_color"
        android:textOff="@string/insane"
        android:textOn="@string/insane"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hard_button" />


</android.support.constraint.ConstraintLayout>